Adjusting links and replacing images
Updated the links to the images on the recipe pages.
Pushing this commit to be able to see a more updated
version of the webpages on github.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/sushi.html">Sushi</a></li>
+        <li><a href="./recipes/butter_chicken.html">Butter Chicken</a></li>
     </ul>
     
 </body>
