--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images_links/Lasagna-12.jpg" height="500" width="500">
-    <p>This Lasagna is of the highest quality, merging the refined touch of italian cuisine with the familiarity of american meals</p>
+    <img src="../images_links/sushi.jpeg" height="500" width="500">
+    <p>Sushi is a representative dish of Japanese Cuisine loved around the world</p>
     <ul>
         <li>ingredient</li>
         <li>ingredient</li>
