--- a/recipes/butter_chicken.html
+++ b/recipes/butter_chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Butter Chicken</h1>
-    <img src="../images_links/Lasagna-12.jpg" height="500" width="500">
+    <img src="../images_links/butter_chicken.jpeg" height="500" width="500">
     <p>Butter chicken, the stape of westernized indian cuisine is loved all over the world.</p>
     <ul>
         <li>ingredient</li>
