Adding ingredient and instructions
Added ingredients and instructions as well as adjusted
photos in the pages. Also added a link to return to
the main page

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -6,24 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="../images_links/sushi.jpeg" height="500" width="500">
+    <h1>Sushi</h1>
+    <img src="../images_links/homemade_sushi.jpg" height="500" width="700">
     <p>Sushi is a representative dish of Japanese Cuisine loved around the world</p>
+    <h2>Ingredients</h2>
     <ul>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
+        <li>6 sheets sushi seaweed</li>
+        <li>1 batch prepared sushi rice</li>
+        <li>1/2 lb sashimi-grade raw salmon</li>
+        <li>4 oz cream cheese</li>
+        <li>1 avocado </li>
+        <li>soy sauce</li>
     </ul>
+    <h2>Instructions</h2>
     <ol>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
+        <li>Place the seaweed on a bamboo mat, then cover the sheet of seaweed with an even layer of prepared sushi rice. Smooth gently with a rice paddle.</li>
+        <li>Layer salmon, cream cheese, and avocado on the rice, and roll it up tightly. Slice with a sharp knife, and enjoy right away with soy sauce.</li>
     </ol>
+    <a href="../index.html" rel="noreferrer">Back to Homepage</a>
 </body>
 </html>
