--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/sushi.html">Sushi</a></li>
-        <li><a href="./recipes/butter_chicken.html">Butter Chicken</a></li>
+        <li><a href="./recipes/lasagna.html" rel="noreferrer">Lasagna</a></li>
+        <li><a href="./recipes/sushi.html" rel="noreferrer">Sushi</a></li>
+        <li><a href="./recipes/butter_chicken.html" rel="noreferrer">Butter Chicken</a></li>
     </ul>
     
 </body>
