--- a/recipes/butter_chicken.html
+++ b/recipes/butter_chicken.html
@@ -7,23 +7,32 @@
 </head>
 <body>
     <h1>Butter Chicken</h1>
-    <img src="../images_links/butter_chicken.jpeg" height="500" width="500">
-    <p>Butter chicken, the stape of westernized indian cuisine is loved all over the world.</p>
+    <img src="../images_links/butter_chicken.jpeg" height="600" width="500">
+    <p>Butter chicken, the most recognizable indian cuisine is loved all over the world.</p>
+    <h2>Ingredients</h2>
     <ul>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
-        <li>ingredient</li>
+        <li>1 tablespoon oil</li>
+        <li>1 tablespoon butter</li>
+        <li>1 medium onion, diced</li>
+        <li>1 teaspoon fresh ginger, finely minced or grated (or use paste)</li>
+        <li>2-3 cloves garlic, finely minced or crushed</li>
+        <li>1 ½ pounds about 2-3 boneless, skinless chicken breasts, cut into ¾-inch chunks</li>
+        <li>4 tablespoons tomato paste, or 8 oz can of tomato sauce</li>
+        <li>1 tablespoon garam masala</li>
+        <li>1 teaspoon chili powder, or paprika, adjust to taste</li>
+        <li>1 teaspoon Fenugreek, I use powder, but seeds or mustard seeds can be used too, optional*</li>
+        <li>1 teaspoon cumin</li>
+        <li>1 tsp salt</li>
+        <li>1/4 tsp black pepper</li>
+        <li>1 cup heavy cream, sub for half & half or yogurt for low fat</li>
+        <li>Hot cooked rice and naan for serving</li>
     </ul>
+    <h2>Instructions</h2>
     <ol>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
-        <li>Steps</li>
+        <li>Heat a large skillet or medium saucepan over medium-high heat. Add the oil, butter, and onions and cook onions down until lightly golden, about 3-4 minutes. Add ginger and garlic and let cook for 30 seconds, stirring so it doesn`t burn.</li>
+        <li>Add the chicken, tomato paste, and spices. Cook for 5-6 minutes or until everything is cooked through.</li>
+        <li>Add the heavy cream and simmer for 8-10 minutes stirring occasionally. Serve over Basmati rice or with naan.</li>
     </ol>
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
